    the directory specified in the Windows registry exists, and sets a
    new $INTEL_C_COMPILER_VERSION construction variable to identify the
    version being used.  (Niall Douglas contributed an early prototype
    of parts of this module.)

  - Fix the private Conftest._Have() function so it doesn't change
    non-alphanumeric characters to underscores.

  From Chris Pawling:

  - Have the linkloc tool use $MSVS_VERSION to select the Microsoft
    Visual Studio version to use.

  From Kevin Quick:

  - Fix the Builder name returned from ListBuilders and other instances
    of subclasses of the BuilderBase class.

  - Add Builders and construction variables to support rpcgen:
    RPCGenClient(), RPCGenHeader(), RPCGenService(), RPCGenXDR(),
    $RPCGEN, $RPCGENFLAGS, $RPCGENCLIENTFLAGS, $RPCGENHEADERFLAGS,
    $RPCGENSERVICEFLAGS, $RPCGENXDRFLAGS.

  - Update the man page to document that prefix and suffix Builder
    keyword arguments can be strings, callables or dictionaries.

  - Provide more info in the error message when a user tries to build
    a target multiple ways.

  - Fix Delete() when a file doesn't exist and must_exist=1.  (We were
    unintentionally dependent on a bug in versions of the Python shutil.py
    module prior to Python 2.3, which would generate an exception for
    a nonexistent file even when ignore_errors was set.)

  - Only replace a Node's builder with a non-null source builder.

  - Fix a stack trace when a suffix selection dictionary is passed
    an empty source file list.

  - Allow optional names to be attached to Builders, for default
    Builders that don't get attached to construction environments.

  - Fix problems with Parallel Task Exception handling.

  - Build targets in an associated BuildDir even if there are targets
    or subdirectories locally in the source directory.

  - If a FunctionAction has a callable class as its underlying Python
    function, use its strfunction() method (if any) to display the